# Teoria-da-Informacao-Trabalho-1

./: .coverage  .gitignore  Como usar.md  README.md  gui.py  main.py  pyproject.toml  requirements.txt  utils.py
encoding/: elias_gamma.py  fibonacci.py  golomb.py  huffman.py
error/: crc.py  hamming.py  repetition.py
socket_comm/: client.py  server.py
src/: __init__.py
src/cli/: __init__.py  cli.py  cli_old.py  main.py
src/decoders/: __init__.py  decoders.py
src/encoders/: __init__.py  encoders.py
src/enconders/: enconders.py
src/teoria_informacao.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  conftest.py  decoder_test.py  encoder_test.py  test_algoritmos.py  test_carga.py  test_cli.py
